<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="login_text_privacy"><![CDATA[By signing in, you agree that you have read  and accepted the Privacy Policy. Click here to view it.]]></string>
    <string name="search_hint"><![CDATA[Search for Movies or TV Shows…]]></string>
    <string name="search_empty"><![CDATA[The search did not return any Results.]]></string>
    <string name="dialog_logout_title"><![CDATA[Logout]]></string>
    <string name="dialog_logout_message"><![CDATA[Are you sure that you want to log out? Don\'t worry, your Watchables are saved with your account and you can log in again anytime.]]></string>
    <string name="dialog_delete_watchable_title"><![CDATA[Watch out!]]></string>
    <string name="dialog_delete_watchable_message"><![CDATA[Are you sure you want to delete this Watchable?]]></string>
    <string name="display_name_movie"><![CDATA[Movie]]></string>
    <string name="display_name_show"><![CDATA[TV Show]]></string>
    <string name="menu_watchable_delete"><![CDATA[Delete]]></string>
    <string name="menu_watchable_add"><![CDATA[Add as Watchable]]></string>
    <string name="menu_watchable_website"><![CDATA[Open Website]]></string>
    <string name="menu_watchable_imdb"><![CDATA[Open Imdb]]></string>
    <string name="menu_watchable_facebook"><![CDATA[Open on Facebook]]></string>
    <string name="menu_watchable_instagram"><![CDATA[Open on Instagram]]></string>
    <string name="menu_watchable_twitter"><![CDATA[Open on Twitter]]></string>
    <string name="menu_watchable_share"><![CDATA[Share Watchable]]></string>
    <string name="release_date_past"><![CDATA[Aired on %s]]></string>
    <string name="release_date_future"><![CDATA[Airing on %s]]></string>
    <string name="realease_date_btn_more"><![CDATA[Click here for others]]></string>
    <string name="realease_date_dialog_title"><![CDATA[Release Dates]]></string>
    <string name="watchable_watched"><![CDATA[Watched]]></string>
    <string name="watchable_not_watched"><![CDATA[Not yet Watched]]></string>
    <string name="empty_watchable_title"><![CDATA[Oh no :(]]></string>
    <string name="empty_watchable_text"><![CDATA[You have not added any Watchables yet. Add some by using the Search!]]></string>
    <string name="more_update_watchables"><![CDATA[Update Watchables]]></string>
    <string name="more_update_watchables_subtitle"><![CDATA[Synchronize your Watchables with the server, if something does not seem right]]></string>
    <string name="more_logout"><![CDATA[Logout]]></string>
    <string name="more_report_bug"><![CDATA[Report a bug]]></string>
    <string name="more_analytics"><![CDATA[Analytics]]></string>
    <string name="more_licenses"><![CDATA[Open Source Licenses]]></string>
    <string name="more_privacy_policy"><![CDATA[Privacy Policy]]></string>
    <string name="more_developer_info"><![CDATA[Developer Info]]></string>
    <string name="more_share_app"><![CDATA[Share App with Friends]]></string>
    <string name="more_user_id"><![CDATA[User ID: %s]]></string>
    <string name="more_app_version"><![CDATA[App Version: %s]]></string>
    <string name="more_copied_user_id_label"><![CDATA[Copied User ID]]></string>
    <string-array name="more_hello_there">
        <item><![CDATA[Hi\n]]></item>
        <item><![CDATA[Hello\n]]></item>
        <item><![CDATA[Hello there,\n]]></item>
        <item><![CDATA[Hey\n]]></item>
        <item><![CDATA[Hey there,\n]]></item>
        <item><![CDATA[What\'s up,\n]]></item>
        <item><![CDATA[Good to see you,\n]]></item>
        <item><![CDATA[Nice to see you,\n]]></item>
        <item><![CDATA[Have a good day,\n]]></item>
        <item><![CDATA[Have a good one,\n]]></item>
        <item><![CDATA[Greetings,\n]]></item>
        <item><![CDATA[How\'s it going,\n]]></item>
        <item><![CDATA[How’s life,\n]]></item>
        <item><![CDATA[Yo,\n]]></item>
        <item><![CDATA[Sup,\n]]></item>
        <item><![CDATA[Howdy,\n]]></item>
        <item><![CDATA[Wazzup,\n]]></item>
        <item><![CDATA[G’day,\n]]></item>
    </string-array>
    <string name="more_ratings_toggle"><![CDATA[Watchable Ratings]]></string>
    <string name="dialog_ok"><![CDATA[OK]]></string>
    <string name="dialog_cancel"><![CDATA[Cancel]]></string>
    <string name="video_type_trailer"><![CDATA[Trailer]]></string>
    <string name="video_type_teaser"><![CDATA[Teaser]]></string>
    <string name="video_type_clip"><![CDATA[Clip]]></string>
    <string name="video_type_featurette"><![CDATA[Featurette]]></string>
    <string name="video_type_openingCredits"><![CDATA[Opening Credits]]></string>
    <string name="episode_name"><![CDATA[S%1$sE%2$s]]></string>
    <string name="dialog_options_watchable"><![CDATA[Actions for \"%s\"]]></string>
    <string name="error_not_authenticated"><![CDATA[Your session has expired]]></string>
    <string name="error_network_unavailable"><![CDATA[No internet connection]]></string>
    <string name="error_server_error"><![CDATA[A server error (%d) occurred]]></string>
    <string name="error_server_error_no_code"><![CDATA[A server error occurred]]></string>
    <string name="error_permission"><![CDATA[Please give the permission to use this feature]]></string>
    <string name="error_other"><![CDATA[An error occurred]]></string>
    <string name="login_btn_google"><![CDATA[Sign in with Google]]></string>
    <string name="login_btn_email"><![CDATA[Sign in with Email]]></string>
    <string name="menu_watchable_season_set_watched"><![CDATA[Set season watched]]></string>
    <string name="menu_watchable_season_set_not_watched"><![CDATA[Set season not watched]]></string>
    <string name="onboarding_snack"><![CDATA[By long pressing Watchables and Episodes, you get more options!]]></string>
    <string name="settings_rate_app"><![CDATA[Rate App in Play Store]]></string>
    <string name="share_app_chooser_title"><![CDATA[Share App]]></string>
    <string name="share_app_chooser_text"><![CDATA[Are you losing track of movies and shows you would like to watch? Check out Watchables to easily create a watchlist: %s]]></string>
    <string name="share_watchable_chooser_title"><![CDATA[Share %s]]></string>
    <string name="share_watchable_chooser_text_movie"><![CDATA[Check out this Movie: %1$s\n%2$s]]></string>
    <string name="share_watchable_chooser_text_show"><![CDATA[Check out this Show: %1$s\n%2$s]]></string>
    <string name="enjoying_dialog_title"><![CDATA[Are you enjoying Watchables?]]></string>
    <string name="enjoying_dialog_message"><![CDATA[If you do, you could rate it on the Play Store! If you do not… well maybe wait for an update! :D]]></string>
    <string name="enjoying_dialog_positive"><![CDATA[Rate now]]></string>
    <string name="enjoying_dialog_negative"><![CDATA[Not now]]></string>
    <string name="detail_error_additional_data"><![CDATA[Error loading additional data]]></string>
    <string name="detail_tv_actors"><![CDATA[Starring %s…]]></string>
    <string name="detail_tv_ratings"><![CDATA[out of %d reviews]]></string>
    <string name="watchables_filter_tv_title"><![CDATA[Filter Watchables]]></string>
    <string name="watchables_filter_type_all"><![CDATA[All]]></string>
    <string name="watchables_filter_type_movies"><![CDATA[Movies]]></string>
    <string name="watchables_filter_type_shows"><![CDATA[Tv Shows]]></string>
    <string name="watchables_sorting_title"><![CDATA[Sort Watchables]]></string>
    <string name="watchables_sorting_watched_name"><![CDATA[By watched]]></string>
    <string name="watchables_sorting_last_updated"><![CDATA[By last updated]]></string>
    <string name="watchables_sorting_name_ascending"><![CDATA[By name]]></string>
    <string name="watchables_sorting_type_ascending"><![CDATA[By type]]></string>
    <string name="tmdb_attribution"><![CDATA[This product uses the TMDb API but is not endorsed or certified by TMDb.]]></string>
    <string name="scan_tv_permission_title"><![CDATA[For this feature, you have to give us permission to use your camera.]]></string>
    <string name="scan_btn_permission"><![CDATA[Show permission dialog]]></string>
    <string name="scan_tv_description"><![CDATA[Scan barcodes or QR codes of Watchable Movies or TV shows to display them in the app!]]></string>
    <string name="scan_error"><![CDATA[Unfortunately the code could not be processed]]></string>
    <string name="scan_flash_on"><![CDATA[Flash On]]></string>
    <string name="scan_flash_off"><![CDATA[Flash Off]]></string>
    <string name="detail_iv_cd_qr"><![CDATA[The QR code of the Watchable]]></string>
    <string name="detail_error_qr"><![CDATA[QR code could not be created]]></string>
    <string name="login_email_btn_send"><![CDATA[Send]]></string>
    <string name="login_email_hint_email"><![CDATA[Email]]></string>
    <string name="login_email_hint_name"><![CDATA[Name]]></string>
    <string name="login_email_btn_cancel"><![CDATA[Cancel]]></string>
    <string name="dialog_new_version_title"><![CDATA[New Version]]></string>
    <string name="dialog_new_version_message"><![CDATA[A new version of the App is available! Click "Update Now" if you want to get the latest features!]]></string>
    <string name="dialog_new_version_update"><![CDATA[Update Now]]></string>
    <string name="dialog_new_version_cancel"><![CDATA[Cancel]]></string>
    <string name="notification_add_channel_name"><![CDATA[Watchables Add Notifications]]></string>
    <string name="notification_add_channel_description"><![CDATA[These notifications are displayed when a Watchable is being added to your list.]]></string>
    <string name="notification_add_error_notification_title"><![CDATA[Sorry!]]></string>
    <string name="notification_add_error_notification_text"><![CDATA[An error occurred while trying to add %s]]></string>
    <string name="notification_message_channel_name"><![CDATA[Message Notifications]]></string>
    <string name="notification_message_channel_description"><![CDATA[These notifications are displayed when a message is received from the Server.]]></string>
    <string name="notification_update_channel_name"><![CDATA[Watchable Update Notifications]]></string>
    <string name="notification_update_channel_description"><![CDATA[These notifications are displayed when a Watchable is updated with new information.]]></string>
    <string name="notification_update_title_show_name"><![CDATA[%1$s - S%2$d]]></string>
    <string name="notification_update_title"><![CDATA[%s was updated]]></string>
    <string name="notification_update_text"><![CDATA[Click here to learn more]]></string>
    <string name="dev_mail"><![CDATA[mail@florianschuster.at]]></string>
    <string name="imdb_id_url"><![CDATA[https://www.imdb.com/title/%s/]]></string>
    <string name="tmdb_url"><![CDATA[https://www.themoviedb.org/]]></string>
    <string name="privacy_policy_url"><![CDATA[https://florianschuster.at/watchables/privacy.html]]></string>
    <string name="developer_url"><![CDATA[https://florianschuster.at/]]></string>
    <string name="youtube_url"><![CDATA[https://www.youtube.com/watch?v=%s]]></string>
    <string name="youtube_thumbnail"><![CDATA[https://img.youtube.com/vi/%s/sddefault.jpg]]></string>
    <string name="facebook_id_url"><![CDATA[https://www.facebook.com/%s/]]></string>
    <string name="instagram_id_url"><![CDATA[https://www.instagram.com/%s/]]></string>
    <string name="twitter_id_url"><![CDATA[https://twitter.com/%s/]]></string>
    <string name="analytics_watchable_add_event"><![CDATA[watchable_add]]></string>
    <string name="analytics_watchable_delete_event"><![CDATA[watchable_delete]]></string>
    <string name="analytics_watchable_watched_event"><![CDATA[watchable_watched]]></string>
    <string name="analytics_delete_worker"><![CDATA[delete_worker]]></string>
</resources>
