<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/dialogBackground">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFilter"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/watchables_filter_tv_title"
        android:textColor="@color/textLightPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:chipSpacing="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/tvFilter"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterAll"
            style="@style/FilterChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_filter_type_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterMovies"
            style="@style/FilterChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_filter_type_movies" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterShows"
            style="@style/FilterChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_filter_type_shows" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@color/white_opacity_20"
        app:layout_constraintTop_toBottomOf="@id/cgFilter" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSort"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/watchables_sorting_title"
        android:textColor="@color/textLightPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgSorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin_large"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        app:chipSpacing="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSort"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/FilterChip"
            android:id="@+id/chipSortingWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_sorting_watched_name" />

        <com.google.android.material.chip.Chip
            style="@style/FilterChip"
            android:id="@+id/chipLastUpdated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_sorting_last_updated" />

        <com.google.android.material.chip.Chip
            style="@style/FilterChip"
            android:id="@+id/chipSortingNameAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_sorting_name_ascending" />

        <com.google.android.material.chip.Chip
            style="@style/FilterChip"
            android:id="@+id/chipSortingTypeAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchables_sorting_type_ascending" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>